--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bcrypt": "^6.0.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.19.3"
+    "mongoose": "^8.19.3",
+    "swagger-jsdoc": "^6.2.8"
   }
 }
